--- a/package.json
+++ b/package.json
@@ -21,8 +21,21 @@
     "eslint-plugin-node": "8.0.0",
     "eslint-plugin-promise": "4.0.1",
     "eslint-plugin-standard": "4.0.0",
+    "husky": "1.1.2",
+    "lint-staged": "8.0.4",
     "mocha": "5.2.0",
     "nyc": "13.1.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix",
+      "git add"
+    ]
   },
   "eslintConfig": {
     "env": {
