--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "data-structures",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "lint": "eslint .",
@@ -14,6 +13,10 @@
     "esm": "3.0.84"
   },
   "devDependencies": {
+    "@babel/core": "7.2.0",
+    "@babel/plugin-proposal-class-properties": "7.2.1",
+    "@babel/register": "7.0.0",
+    "babel-eslint": "10.0.1",
     "chai": "4.2.0",
     "eslint": "5.8.0",
     "eslint-config-standard": "12.0.0",
@@ -25,6 +28,11 @@
     "lint-staged": "8.0.4",
     "mocha": "5.2.0",
     "nyc": "13.1.0"
+  },
+  "babel": {
+    "plugins": [
+      "@babel/plugin-proposal-class-properties"
+    ]
   },
   "husky": {
     "hooks": {
@@ -38,6 +46,7 @@
     ]
   },
   "eslintConfig": {
+    "parser": "babel-eslint",
     "env": {
       "node": true
     },
@@ -88,5 +97,16 @@
       "database/seeds/",
       "**/node_modules/**"
     ]
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/thebearingedge/data-structures.git"
+  },
+  "keywords": [],
+  "author": "",
+  "bugs": {
+    "url": "https://github.com/thebearingedge/data-structures/issues"
+  },
+  "homepage": "https://github.com/thebearingedge/data-structures#readme",
+  "description": ""
 }
